--- a/appGestionInventario/templates/base.html
+++ b/appGestionInventario/templates/base.html
@@ -9,33 +9,51 @@
     
     <!-- Bootstrap 5.3.3 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
     <!-- Archivo CSS personalizado -->
-    <link rel="stylesheet" href="{% static 'css/gestionCategorias.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-success">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">BioTecnologia</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand tex-center" href="#">
+            <span class="Gris">Ingeniería En</span> 
+            <span class="Verde">Biotecnología Industrial</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Productos</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+                <a class="nav-item nav-link active" href="#">Home</a>
+                <a class="nav-item nav-link" href="#">productos</a>
 
-      <div class="container py-4">
+                <!-- Submenú (Dropdown) -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Categorías
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item" href="#">Reactivos</a>
+                      <a class="dropdown-item" href="#">Cristalería</a>
+                      <a class="dropdown-item" href="#">Equipos</a>
+                    </div>
+                  </li>
+
+                <!-- Botón de Cerrar Sesión -->
+                <button class="btn btn-danger ms-3" type="button" onclick="">
+                    <i class="bi bi-box-arrow-right"></i> <!-- Icono de salida -->
+                </button>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container py-4">
         {% block body %}
         {% endblock %}
-      </div>
+    </div>
 
     <!-- Bootstrap 5.3.3 JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
