--- a/appGestionInventario/templates/login.html
+++ b/appGestionInventario/templates/login.html
@@ -1,49 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 16px;
-            color: #666;
-        }
-        .mi-clase {
-            background-color: #e2e2e2;
-            padding: 10px;
-            border-radius: 5px;
-        }
-    </style>
+    <title>Documentos</title>
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a mi página web</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Sección 1</h2>
-            <p>Este es un párrafo en la primera sección de la página.</p>
-            <div class="mi-clase">
-                <p>Este es un párrafo dentro de un div con una clase.</p>
-            </div>
-        </section>
-        <section>
-            <h2>Sección 2</h2>
-            <p>Este es otro párrafo en la segunda sección de la página.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Mi Página Web. Todos los derechos reservados.</p>
-    </footer>
+    <h1>Hola Mundo</h1>
 </body>
-</html>
+</html>HTML:5
