--- a/appGestionInventario/templates/edicionCategoria.html
+++ b/appGestionInventario/templates/edicionCategoria.html
@@ -16,7 +16,7 @@
                         <input type="text" id="txtNombre" name="txtNombre" value="{{categoria.nombre_categoria}}" class="form-control" placeholder="Nombre" maxlength="50" required>
                     </div>
                     <div class="form-group mb-3">
-                        <input type="text" id="txtDescripcion" name="txtDescripcion" value="{{categoria.descripcion}}" class="form-control" placeholder="Descripció" minlength="6" maxlength="100" required>
+                        <input type="text" id="txtDescripcion" name="txtDescripcion" value="{{categoria.descripcion}}" class="form-control" placeholder="Descripción" minlength="6" maxlength="100" required>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white w-100">Guardar</button>
