--- a/appGestionInventario/templates/gestionCategoria.html
+++ b/appGestionInventario/templates/gestionCategoria.html
@@ -24,7 +24,7 @@
                         <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre" maxlength="50" required>
                     </div>
                     <div class="form-group mb-3">
-                        <input type="text" id="txtDescripcion" name="txtDescripcion" class="form-control" placeholder="Descripció" minlength="6" maxlength="100" required>
+                        <input type="text" id="txtDescripcion" name="txtDescripcion" class="form-control" placeholder="Descripción" minlength="6" maxlength="100" required>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white w-100">Guardar</button>
