--- a/aplicaciones/appGestionInventario/templates/base.html
+++ b/aplicaciones/appGestionInventario/templates/base.html
@@ -9,8 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap 5.3.3 CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
@@ -21,41 +20,41 @@
 
 <body>
     {% if user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand tex-center" href="#">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+        <a class="navbar-brand text-center" href="#">
             <span class="Gris">Ingeniería En</span>
             <span class="Verde">Biotecnología Industrial</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-                <a class="nav-item nav-link active" href="#">Home</a>
-                <a class="nav-item nav-link" href="#">Productos</a>
-
-                <!-- Submenú (Dropdown) -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link active" href="{% url 'gestion_laboratorios' %}">Gestión Laboratorios</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Categorías
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Gestión Categorías
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Reactivos</a>
-                        <a class="dropdown-item" href="#">Cristalería</a>
-                        <a class="dropdown-item" href="#">Equipos</a>
-                    </div>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li class="nav-item"><a class="dropdown-item" href="#">Reactivos</a></li>
+                        <li class="nav-item"><a class="dropdown-item" href="#">Cristalería</a></li>
+                        <li class="nav-item"><a class="dropdown-item" href="#">Equipos</a></li>
+                    </ul>
                 </li>
-                
+                <li class="nav-item"><a class="nav-link" href="#">Generar Reportes</a></li>
+    
                 <!-- Botón de Cerrar Sesión -->
                 <form action="{% url 'logout' %}" method="post" style="display:inline;">
                     {% csrf_token %}
-                    <button class="btn btn-danger ms-3" type="submit">
-                        <i class="bi bi-box-arrow-right"></i> <!-- Icono de salida -->
+                    <button class="btn btn-danger ms-3" type="submit" aria-label="Cerrar sesión">
+                        <i class="bi bi-box-arrow-right"></i>
+                        Cerrar sesión
                     </button>
                 </form>
             </div>
         </div>
-    </nav>
+    </nav>    
     {% endif %}
 
     <div class="container py-4">
@@ -63,18 +62,20 @@
         {% endblock %}
     </div>
 
-    <!-- Bootstrap 5.3.3 JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-CgJkO8y3QaDMeOsF1b8gLqbSZjVfU9PEJZbHF48/ziPfZIN9g2k57vNp/CmXkdxB" crossorigin="anonymous"></script>
-
+    <!-- bootstrap js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Archivo JavaScript personalizado -->
     <script src="{% static 'js/gestionCategorias.js' %}"></script>
 
     <!-- Script para ocultar mensajes automáticamente -->
     <script>
-        $(document).ready(function () {
+        document.addEventListener('DOMContentLoaded', function () {
             setTimeout(function () {
-                $(".alert").alert('close');
+                let alert = document.querySelector(".alert");
+                if (alert) {
+                    alert.classList.add('fade');
+                    alert.classList.remove('show');
+                }
             }, 3000); // 3000 milisegundos = 3 segundos
         });
     </script>
