mejoras en appGestionLaboratorio

--- a/aplicaciones/appGestionInventario/templates/base.html
+++ b/aplicaciones/appGestionInventario/templates/base.html
@@ -37,7 +37,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'gestion_laboratorios' %}">Gestión de Laboratorios</a>
+                        <a class="nav-link" href="{% url 'reservar_laboratorio' %}">Reservación de Laboratorios</a>
                     </li>
                 {% endif %}
                 <li class="nav-item dropdown">
