--- a/aplicaciones/appGestionInventario/templates/gestionCategoria.html
+++ b/aplicaciones/appGestionInventario/templates/gestionCategoria.html
@@ -18,13 +18,10 @@
             <div class="card-body">
                 <form action="/registrarCategoria/" method="POST"> {% csrf_token %}
                     <div class="form-group mb-3">
-                        <input type="text" id="txtCodigo" name="txtCodigo" class="form-control" placeholder="Código" minlength="5" maxlength="6" required>
-                    </div>
-                    <div class="form-group mb-3">
                         <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre" maxlength="50" required>
                     </div>
                     <div class="form-group mb-3">
-                        <input type="text" id="txtDescripcion" name="txtDescripcion" class="form-control" placeholder="Descripció" minlength="6" maxlength="100" required>
+                        <input type="text" id="txtDescripcion" name="txtDescripcion" class="form-control" placeholder="Descripción" minlength="6" maxlength="100" required>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white w-100">Guardar</button>
@@ -49,10 +46,9 @@
                 <tbody>
                     {% for c in categorias %}
                     <tr>
-                        <td>{{forloop.counter}}</td>
-                        <td>{{c.cod_categoria}}</td>
-                        <td>{{c.nombre_categoria}}</td>
-                        <td>{{c.descripcion}}</td>
+                        <td>{{ c.cod_categoria }}</td> <!-- Muestra el cod_categoria -->
+                        <td>{{ c.nombre_categoria }}</td>
+                        <td>{{ c.descripcion }}</td>
                         <td><a href="edicionCategoria/{{c.cod_categoria}}" class="btn btn-info">Editar</a></td>
                         <td><a href="eliminarCategoria/{{c.cod_categoria}}" class="btn btn-danger btnEliminacion">Eliminar</a></td>
                     </tr>
